2010-11-14  Ryuan Choi  <ryuan.choi@samsung.com>

        Reviewed by Martin Robinson.

        [EFL] add pango support
        https://bugs.webkit.org/show_bug.cgi?id=46029

        Add FONT_BACKEND option to switch between pango and freetype.

        * cmake/OptionsEfl.cmake:

2010-11-11  Eric Seidel  <eric@webkit.org>

        Rubber-stamped by Adam Roben.

        * .: Modified property svn:ignore.
         - Add WebKitSupportLibrary.zip and WebKitBuild to the root ignore list.

2010-11-10  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by David Hyatt.

        HTML5 Ruby support should be mandatory feature
        https://bugs.webkit.org/show_bug.cgi?id=49272

        Remove Ruby as optional feature.

        * cmake/OptionsEfl.cmake:
        * cmakeconfig.h.cmake:
        * configure.ac:

2010-11-09  Gavin Peters  <gavinp@chromium.org>

        Reviewed by Xan Lopez.

        gtk platform doesn't support link prefetch
        https://bugs.webkit.org/show_bug.cgi?id=49234

        * configure.ac:

2010-11-08  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Martin Robinson.

        Update version numbers for release.

        * configure.ac:

2010-11-04  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Reviewed by Adam Barth.

        [EFL] Enable HTML5 Video
        https://bugs.webkit.org/show_bug.cgi?id=48972 

        Enable HTML 5 Video option for WebKit EFL. 

        * cmake/OptionsEfl.cmake:

2010-11-01  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

        Reviewed by Andreas Kling.

        [Qt][Symbian] QtTestBrowser runs out of memory with most of javascript benchmarks.
        https://bugs.webkit.org/show_bug.cgi?id=48730

        Increase the maximum heap size on Symbian to 256 MB.

        * WebKit.pri:

2010-10-29  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Adam Roben and David Kilzer.

        Fix and cleanup of build systems
        https://bugs.webkit.org/show_bug.cgi?id=48342
