@@ -11,12 +11,15 @@
 #define ENABLE_EVENTSOURCE @ENABLE_EVENTSOURCE_VALUE@
 #define ENABLE_FAST_MOBILE_SCROLLING @ENABLE_FAST_MOBILE_SCROLLING_VALUE@
 #define ENABLE_FILTERS @ENABLE_FILTERS_VALUE@
+#define ENABLE_FTPDIR @ENABLE_FTPDIR_VALUE@
 #define ENABLE_GEOLOCATION @ENABLE_GEOLOCATION_VALUE@
 #define ENABLE_GLIB_SUPPORT @ENABLE_GLIB_SUPPORT_VALUE@
 #define ENABLE_ICONDATABASE @ENABLE_ICONDATABASE_VALUE@
+#define ENABLE_INSPECTOR @ENABLE_INSPECTOR_VALUE@
 #define ENABLE_JAVASCRIPT_DEBUGGER @ENABLE_JAVASCRIPT_DEBUGGER_VALUE@
 #define ENABLE_JIT @ENABLE_JIT_VALUE@
 #define ENABLE_MATHML @ENABLE_MATHML_VALUE@
+#define ENABLE_NETSCAPE_PLUGIN_API @ENABLE_NETSCAPE_PLUGIN_API_VALUE@
 #define ENABLE_NOTIFICATIONS @ENABLE_NOTIFICATIONS_VALUE@
 #define ENABLE_OFFLINE_WEB_APPLICATIONS @ENABLE_OFFLINE_WEB_APPLICATIONS_VALUE@
 #define ENABLE_ORIENTATION_EVENTS @ENABLE_ORIENTATION_EVENTS_VALUE@
